--- a/devcamper_api/package.json
+++ b/devcamper_api/package.json
@@ -16,9 +16,11 @@
 		"express": "^4.17.1",
 		"express-fileupload": "^1.1.6-alpha.6",
 		"express-mongo-sanitize": "^1.3.2",
+		"helmet": "^3.21.2",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.9.1",
-		"nodemailer": "^6.3.1"
+		"nodemailer": "^6.3.1",
+		"xss-clean": "^0.1.1"
 	},
 	"devDependencies": {
 		"nodemon": "^1.19.4"
